ParfaitService and module now basically in place, with a single counter currently being exposed.  still need to work out this gradle build system to properly integrate the Parfait library.

--- a/modules/test/testng/src/main/java/log4j.properties
+++ b/modules/test/testng/src/main/java/log4j.properties
@@ -1,5 +1,6 @@
 log4j.rootLogger=INFO, out
 log4j.logger.jgroups=WARN
+log4j.logger.com.custardsource=DEBUG
 
 #log4j.logger.action=DEBUG
 #log4j.logger.gateway=DEBUG
