--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     testCompile project(':test-testng')
     testCompile('org.testng:testng:5.10:jdk15') { transitive = false }
     testCompile('org.hamcrest:hamcrest-all:1.1') { transitive = false }
+    testCompile('org.mockito:mockito-all:1.8.5') { transitive = false }
 
 }
 
