Basic cut at getting a requestId for each ES interaction done so all log lines are traced with that requestId via MDC.

--- a/config/logging.yml
+++ b/config/logging.yml
@@ -17,7 +17,7 @@ appender:
     type: console
     layout:
       type: consolePattern
-      conversionPattern: "[%d{ISO8601}][%-5p][%-25c][%t] %m%n"
+      conversionPattern: "[%d{ISO8601}][%-5p][%-25c][%t][%X{requestId}] %m%n"
 
   file:
     type: dailyRollingFile
